Header: Fix spacing in top bar

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -79,7 +79,6 @@
   padding: 1px 2px;
   font-size: 15px;
   margin-top: 7px;
-  margin-right: 10px;
   vertical-align: top;
   position: relative;
 }
